	  the MMU and caching.  This is safer because it avoids the
	  caching issues (and much less redundant) (2013-8-1)
	* arch/arm/src/sama5/chip/sam_mpddrc.h:  Add DDR controller
	  registers definitions for the SAMA5 (2013-8-1).
	* nuttx/configs/sama5d3x-ek/src/sam_sdram.c:  Add logic which
	  will (eventually) support the SDRAM on the SAMA5D3x-EK
	  board.  Initial commit is untested and incomplete (2013-8-1).
	* arch/arm/src/armv7-a/arm_mmu.c:  Move some generic MMU logic
	  out of SAMA5-specific code into this share-able file (2013-8-2)
	* arch/arm/src/armv7-a/mmu.h:  Add inline functions to invalidate
	  a single TLB.
	* arch/arm/src/sama5/sam_allocateheap.c and chip/sama5d3x_memorymap.h:
	  Add logic to handle signed overflow when a memory region is
	  greater than or equal to 2GB (2013-8-2).
	* arch/arm/src/sama5/sam_boot.c:  Boot logic now initially
	  configures DRAM as strongly ordered so that it can be initialized.
	  After initialization, the page table entries are modified so
	  that DRAM is fully cache-able (2018-8-2).
	* arch/arm/src/sama5/chip/sam_mpddrc.h:  Correct typos in the
	  SAMA5 DDR controller register definitions (2013-8-2).
	* arch/arm/src/sama5/sam_irq.c:  Correct handling of spurious
	  interrupts (2013-8-3).
	* arch/*/src/*/*_irq.c:  Standardize configuration variables used
	  to enable interrupt controller debug output (2013-8-3).
	* arch/arm/src/sama5/chip/sam_dmac.h: Add register definitions for the
	  SAMA5 DMA controller (2013-8-3).
	* arch/arm/src/sama5/sam_dmac.c and sam_dmac.h:  Add support for the
	  SAMA5 DMAC controllers.  Initial check-in is untested and is a
	  straight leverage from the SAM3/4 (2013-8-4).
	* arch/arm/src/sama5/sam_spi.c, sam_spi.h, and chip/sam_spi.h:
	  Leverage SPI support from SAM/3/4.  Initial check-in is untested
	  and have several limitations:  No DMA, no SPI1 support (2013-8-4).
	* arch/arm/src/sama5/sam_spi.c and sam_spi.h:  Now supports SPI1
	  and a register access debug option (2013-8-4).
