@@ -5284,4 +5284,6 @@
 	  and have several limitations:  No DMA, no SPI1 support (2013-8-4).
 	* arch/arm/src/sama5/sam_spi.c and sam_spi.h:  Now supports SPI1
 	  and a register access debug option (2013-8-4).
+	* configs/sama5d3x-ek/src/sam_spi.c:  At board support for the
+	  AT25 serial flash (2013-8-4).
 
